; ModuleID = '/home/carl/AnghaBench/freebsd/sys/vm/extr_swap_pager.c_swblk_trie_alloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/vm/extr_swap_pager.c_swblk_trie_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pctrie = type { i32 }

@swpctrie_zone = common dso_local global i32 0, align 4
@M_NOWAIT = common dso_local global i32 0, align 4
@curproc = common dso_local global i64 0, align 8
@pageproc = common dso_local global i64 0, align 8
@M_USE_RESERVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.pctrie*)* @swblk_trie_alloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @swblk_trie_alloc(%struct.pctrie* %0) #0 {
  %2 = alloca %struct.pctrie*, align 8
  store %struct.pctrie* %0, %struct.pctrie** %2, align 8
  %3 = load i32, i32* @swpctrie_zone, align 4
  %4 = load i32, i32* @M_NOWAIT, align 4
  %5 = load i64, i64* @curproc, align 8
  %6 = load i64, i64* @pageproc, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @M_USE_RESERVE, align 4
  br label %11

10:                                               ; preds = %1
  br label %11

11:                                               ; preds = %10, %8
  %12 = phi i32 [ %9, %8 ], [ 0, %10 ]
  %13 = or i32 %4, %12
  %14 = call i8* @uma_zalloc(i32 %3, i32 %13)
  ret i8* %14
}

declare dso_local i8* @uma_zalloc(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
